Even more German translations.

--- a/languages/ISO639-3/de.ini
+++ b/languages/ISO639-3/de.ini
@@ -2,18 +2,29 @@
 aar = "Danakil"
 abk = "Abchasisch"
 ace = "Aceh"
+ach = "Acoli"
+ada = "Adangme"
 ady = "Adygeisch"
 afa = "Hamitosemitische Sprachen"
+afh = "Afrihili"
+afr = "Afrikaans"
+ain = "Ainu"
+aka = "Akan"
 akk = "Akkadisch"
+alb = "Albanisch"
 ale = "Aleutisch"
 alg = "Algonkin Sprachen"
 alt = "Altaisch"
 amh = "Amharisch"
 ang = "Altenglisch"
+anp = "Angika"
+apa = "Apache"
 ara = "Arabisch"
 arc = "Aramäisch"
 arg = "Aragonesisch"
+arm = "Armenisch"
 arn = "Mapuche"
+arp = "Arapaho"
 art = "Kunstsprachen"
 arw = "Arawak-Sprachen"
 asm = "Assamesisch"
@@ -22,15 +33,22 @@ ath = "Athapaskische Sprachen"
 aus = "Australische Sprachen"
 ava = "Awarisch"
 ave = "Avestisch"
+awa = "Awadhi"
+aym = "Aymara"
 aze = "Aserbaidschanisch"
 azj = "Aserbaidschanisch"
+bad = "Banda"
+bai = "Bamileke"
 bak = "Baschkirisch"
 bal = "Belutschisch"
+bam = "Bambara"
 ban = "Balinesisch"
+baq = "Baskisch"
 bas = "Basaa"
 bat = "Baltische Sprachen"
 bej = "Bedauye"
 bel = "Belarussisch"
+bem = "Bemba"
 ben = "Bengalisch"
 ber = "Berbersprachen"
 bho = "Bhodschpuri"
@@ -44,57 +62,87 @@ bod = "Tibetisch"
 bos = "Bosnisch"
 bra = "Braj-Bhakha"
 bre = "Bretonisch"
+btk = "Batak"
 bua = "Burjatisch"
 bug = "Bugi"
 bul = "Bulgarisch"
+bur = "Birmanisch"
 byn = "Kuschitisch"
 cad = "Caddo-Sprachen"
 cai = "Indigene Sprachen (Zentralamerika)"
 car = "Karibische Sprachen"
 cat = "Katalanisch"
 cau = "Kaukasische Sprachen"
+ceb = "Cebuano"
 cel = "Keltische Sprachen"
 ces = "Tschechisch"
+cha = "Chamorro"
+chb = "Chibcha"
 che = "Tschetschenisch"
 chg = "Tschgataisch"
+chi = "Chinesisch"
 chk = "Trukesisch"
 chm = "Tscheremissisch"
+chn = "Chinook"
+cho = "Choctaw"
+chp = "Chipewyan"
+chr = "Cherokee"
 chu = "Kirchenslawisch"
 chv = "Tschuwaschisch"
+chy = "Cheyenne"
 cmc = "Cham-Sprachen"
 cop = "Koptisch"
 cor = "Kornisch"
 cos = "Korsisch"
+cpe = "Kreolisch, Engl. basiert"
+cpf = "Kreolisch, Frz. basiert"
 cpp = "Kreolisch, Port. basiert"
+cre = "Cree"
 crh = "Krimtatarisch"
 crp = "Kreolische Sprachen"
 csb = "Kaschubisch"
 cus = "Kuschitische Sprachen"
 cym = "Walisisch"
 cze = "Tschechisch"
+dak = "Dakota"
 dan = "Dänisch"
 dar = "Dari"
+day = "Dayak"
+del = "Delaware"
 den = "Athapaskische Sprachen"
 deu = "Deutsch"
+dgr = "Dogrib"
+din = "Dinka"
 div = "Dhivehi"
+doi = "Dogri"
 dra = "Drawidische Sprachen"
 dsb = "Niedersorbisch"
 dua = "Duala-Sprachen"
+dum = "Mittelniederländisch"
+dut = "Niederländisch"
+dyu = "Dyula"
+dzo = "Dzongkha"
+efi = "Efik"
 egy = "Ägyptisch"
+eka = "Ekajuk"
 ell = "Griechisch"
 elx = "Elamisch"
 eng = "Englisch"
 enm = "Mittelenglisch"
+epo = "Esperanto"
 est = "Estnisch"
 eus = "Baskisch"
 ewe = "Ewe-Sprachen"
+ewo = "Ewondo"
 fan = "Pangwe-Sprachen"
 fao = "Färöisch"
 fas = "Persisch"
+fat = "Fanti"
 fij = "Fidschi"
 fil = "Philippinen-Austronesisch"
 fin = "Finnisch"
 fiu = "Finnougrische Sprachen"
+fon = "Fon"
 fra = "Französisch"
 fre = "Französisch"
 frm = "Mittelfranzösisch"
@@ -104,40 +152,60 @@ frs = "Ostfriesisch"
 fry = "Westfriesisch"
 ful = "Ful"
 fur = "Friulisch"
+gaa = "Ga"
+gay = "Gayo"
+gba = "Gbaya"
 gem = "Germanische Sprachen"
+geo = "Georgisch"
 ger = "Deutsch"
 gez = "Altäthiopisch"
 gil = "Gilbertesisch"
 gla = "Gälisch (Schottland)"
 gle = "Irisch"
 glg = "Galicisch"
+glv = "Manx"
 gmh = "Mittelhochdeutsch"
 goh = "Althochdeutsch"
+gon = "Gondi"
 gor = "Mongondou"
 got = "Gotisch"
+grb = "Grebo"
 grc = "Altgriechisch"
+gre = "Griechisch"
 grk = "Griechisch"
 grn = "Guaraní"
 gsw = "Hochalemannisch"
+guj = "Gujarati"
 gwi = "Kutchin"
+hai = "Haida"
 hat = "Haiti-Kreolisch"
 hau = "Haussa"
 haw = "Hawaiisch"
 hbs = "Serbisch (Lateinisch)"
 heb = "Hebräisch"
+her = "Herero"
+hil = "Hiligaynon"
 him = "Himachali-Sprachen"
+hin = "Hindi"
 hit = "Hethitisch"
 hmn = "Miao-Sprachen"
 hmo = "Hiri-Motu"
 hrv = "Kroatisch"
 hsb = "Obersorbisch"
 hun = "Ungarisch"
+hup = "Hupa"
 hye = "Armenisch"
 hyx = "Armenisch"
+iba = "Iban"
 ibo = "Ibo"
+ice = "Isländisch"
 ido = "Ido (Sinohoan)"
 iii = "Yi"
+ijo = "Ijo"
+iku = "Inuktitut"
+ile = "Interlingue"
 ilo = "Ilokano"
+ina = "Interlingua"
 inc = "Indoarische Sprachen"
 ind = "Indonesisch"
 ine = "Indogermanische Sprachen"
@@ -148,25 +216,38 @@ iro = "Irokesische Sprachen"
 isl = "Isländisch"
 ita = "Italienisch"
 jav = "Javanisch"
+jbo = "Lojban"
 jpn = "Japanisch"
 jpr = "Judäo-Persisch"
 jpx = "Japanisch"
 jrb = "Judäo-Arabisch"
 kaa = "Karakalpakisch"
 kab = "Kabylisch"
+kac = "Kachin"
 kal = "Grönländisch"
+kam = "Kamba"
+kan = "Kannada"
 kar = "Karenisch"
 kas = "Kaschmiri"
 kat = "Georgisch"
+kau = "Kanuri"
 kaw = "Altjavanisch"
 kaz = "Kasachisch"
 kbd = "Kabardinisch"
+kha = "Khasi"
+khi = "Khoisan"
+khm = "Khmer"
 kho = "Sakisch"
+kik = "Kikuyu"
+kin = "Kinyarwanda"
 kir = "Kirgisisch"
+kmb = "Kimbundu"
+kok = "Konkani"
 kom = "Komi-Sprachen"
 kon = "Kongolesisch"
 kor = "Koreanisch"
 kos = "Kosraeanisch"
+kpe = "Kpelle"
 krc = "Karatschai-Balkarisch"
 krl = "Karelisch"
 kro = "Kru-Sprachen"
@@ -174,45 +255,65 @@ kru = "Oraon"
 kua = "Kwanyama"
 kum = "Kumükisch"
 kur = "Kurdisch"
+kut = "Kutenai"
 lad = "Ladinisch (Judenspanisch)"
+lah = "Lahnda"
 lam = "Banjari"
 lao = "Laotisch"
 lat = "Latein"
 lav = "Lettisch"
 lez = "Lesgisch"
 lim = "Limburgisch"
+lin = "Lingala"
 lit = "Litauisch"
 lol = "Lomongo"
 loz = "Rotse"
 ltz = "Luxemburgisch"
 lua = "Tschiluba"
 lub = "Kiluba"
+lug = "Ganda"
 lui = "Luiseño"
+lun = "Lunda"
+luo = "Luo"
+lus = "Lushai"
 lvs = "Lettisch"
+mac = "Makedonisch"
 mad = "Maduresisch"
 mag = "Khotta"
 mah = "Marschallesisch"
+mai = "Maithili"
 mak = "Makassarisch"
+mal = "Malayalam"
 man = "Manding"
+mao = "Maori"
 map = "Austronesische Sprachen"
+mar = "Marathi"
 mas = "Massai"
+may = "Malaiisch"
 mdf = "Mokschamordwinisch"
 mdr = "Mandaresisch"
+men = "Mende"
 mga = "Mittelirisch"
 mic = "Micmac(Mi-kmaq)"
+min = "Minangkabau"
+mis = 'Unbekannt??? = "Unbekannt"'
 mkd = "Mazedonisch"
 mkh = "Mon-Khmer-Sprachen"
 mlg = "Malagassi"
 mlt = "Maltesisch"
 mnc = "Mandschurisch"
 mni = "Meithei"
+mno = "Manobo"
+moh = "Mohawk"
 mol = "Moldauisch"
 mon = "Mongolisch"
+mos = "Mossi"
 msa = "Malaiisch"
 mul = "Mehrsprachig"
 mun = "Mundasprachen"
 mus = "Muskogee-Sprachen"
 mwl = "Mirandesisch"
+mwr = "Marwari"
 mya = "Birmanisch"
 myn = "Maya-Sprachen"
 myv = "Erza-Mordwinisch"
@@ -220,11 +321,14 @@ nah = "Nahuatl (Aztekisch)"
 nai = "Indigene Sprachen (Nordamerika)"
 nap = "Neapolitanisch"
 nau = "Nauruisch"
+nav = "Navajo"
 nbl = "Süd-Ndebele"
 nde = "Nord-Ndebele"
+ndo = "Ndonga"
 nds = "Niederdeutsch"
 nep = "Nepalesisch"
 new = "Newari"
+nia = "Nias"
 nic = "Nigerkordofanische Sprachen"
 niu = "Niue"
 nld = "Niederländisch"
@@ -233,46 +337,64 @@ nob = "Norwegisch (Bokmål)"
 nog = "Nogaisch"
 non = "Altnordisch"
 nor = "Norwegisch"
+nqo = "N'Ko"
 nso = "Sotho (Nord)"
 nub = "Nubische Sprachen"
 nwc = "Altnewari"
 nya = "Chewa"
+nym = "Nyamwezi"
 nyn = "Nkole"
+nyo = "Nyoro"
 nzi = "Nzema"
 oci = "Okzitanisch"
+oji = "Ojibwa"
 ori = "Oriya"
 orm = "Galla"
+osa = "Osage"
 oss = "Ossetisch"
 ota = "Osmanisch"
 oto = "Otomangue-Sprachen"
 paa = "Papuasprachen"
+pag = "Pangasinan"
 pal = "Mittelpersisch"
 pam = "Pampanggan"
 pan = "Pandschabi"
+pap = "Papiamento"
 pau = "Palau"
 peo = "Altpersisch"
+per = "Persisch"
 pes = "Persisch"
 phi = "Philippinen-Austronesisch"
 phn = "Phönikisch"
+pli = "Pali"
 pol = "Polnisch"
 pon = "Ponapeanisch"
 por = "Portugiesisch"
 pra = "Prakrit"
 pro = "Altprovenzalisch"
 pus = "Paschtu"
+que = "Quechua"
+raj = "Rajasthani"
+rap = "Rapanui"
 rar = "Rarotonganisch"
 roa = "Romanische Sprachen"
 roh = "Rätoromanisch"
 rom = "Romani"
 ron = "Rumänisch"
 rum = "Rumänisch"
+run = "Rundi"
 rup = "Aromunisch"
 rus = "Russisch"
+sad = "Sandawe"
+sag = "Sango"
 sah = "Jakutisch"
 sai = "Indigene Sprachen (Südamerika)"
 sal = "Salish"
 sam = "Samaritanisches Aramäisch"
+san = "Sanskrit"
 sas = "Sassak"
+sat = "Santali"
+scc = "Serbisch"
 scn = "Sizilianisch"
 sco = "Schottisch"
 scr = "Kroatisch"
@@ -280,6 +402,8 @@ sel = "Selkupisch"
 sem = "Semitische Sprachen"
 sga = "Altirisch"
 sgn = "Gebärdensprache"
+shn = "Shan"
+sid = "Sidamo"
 sin = "Singhalesisch"
 sio = "Sioux-Sprachen"
 sit = "Sinotibetische Sprachen"
@@ -295,7 +419,10 @@ smn = "Inari-Lappisch"
 smo = "Samoanisch"
 sms = "Skolt-Lappisch"
 sna = "Schona"
+snd = "Sindhi"
+snk = "Soninke"
 sog = "Sogdisch"
+som = "Somali"
 son = "Sonhai-Djerma"
 sot = "Süd-Sotho"
 spa = "Spanisch"
@@ -303,30 +430,46 @@ sqi = "Albanisch"
 srd = "Sardisch"
 srn = "Srananisch"
 srp = "Serbisch"
+srr = "Serer"
 ssa = "Nilosaharanische Sprachen"
 ssw = "Swazi"
+suk = "Sukuma"
 sun = "Sundanesisch"
+sus = "Susu"
 sux = "Sumerisch"
 swa = "Suaheli"
 swe = "Schwedisch"
 swh = "Suaheli"
 syc = "Syrisch"
+syr = "Syrisch"
 tah = "Tahitisch"
 tai = "Thaisprachen"
+tam = "Tamil"
 tat = "Tatarisch"
+tel = "Telugu"
 tem = "Temne"
+ter = "Tereno"
+tet = "Tetum"
 tgk = "Tadschikisch"
+tgl = "Tagalog"
 tha = "Thailändisch"
 tib = "Tibetisch"
+tig = "Tigre"
 tir = "Tigrinja"
+tiv = "Tiv"
 tkl = "Tokelauisch"
 tlh = "Klingonisch"
+tli = "Tlingit"
 tmh = "Tamaseq"
+tog = "Tsonga"
 toi = "Tongaisch"
 ton = "Tongaisch"
 tpi = "Neumelanesisch"
+tsi = "Tsimshian"
 tsn = "Setswana"
+tso = "Tsonga"
 tuk = "Turkmenisch"
+tum = "Tumbuka"
 tup = "Tupi-Sprachen"
 tur = "Türkisch"
 tut = "Altaische Sprachen"
@@ -337,26 +480,41 @@ udm = "Udmurtisch"
 uga = "Ugaritisch"
 uig = "Uigurisch"
 ukr = "Ukrainisch"
+umb = "Umbundu"
 und = "Nichtbestimmte Sprache"
+urd = "Urdu"
 uzb = "Usbekisch"
 uzn = "Usbekisch"
+vai = "Vai"
+ven = "Venda"
 vie = "Vietnamesisch"
+vol = "Volapük"
 vot = "Wotisch"
 wak = "Wakash-Sprachen"
 wal = "Woylatta"
+war = "Waray"
 was = "Asho"
 wel = "Kymrisch"
 wen = "Sorbisch"
 wln = "Wallonisch"
+wol = "Wolof"
 xal = "Kalmückisch"
 xgn = "Mongolisch"
+xho = "Xhosa"
+yao = "Yao"
 yap = "Yapesisch"
 yid = "Jiddisch"
+yor = "Yoruba"
+ypk = "Yupik"
 zap = "Zapotekisch"
 zbl = "Blis-Symbole"
+zen = "Zenaga"
+zha = "Zhuang"
 zho = "Chinesisch"
 zhx = "Chinesisch"
+znd = "Zande"
 zsm = "Malaiisch"
+zul = "Zulu"
 zun = "Zuñi"
 zxx = "Kein sprachlicher Inhalt"
 zza = "Zazaisch"
