Add missing string.

--- a/languages/ISO639-3/en.ini
+++ b/languages/ISO639-3/en.ini
@@ -326,6 +326,7 @@ glc = "Bon Gula"
 gld = "Nanai"
 gle = "Irish"
 glg = "Galician"
+glk = "Gilaki"
 glv = "Manx"
 gme = "East Germanic"
 gmh = "German, Middle High (ca. 1050-1500)"
