Search an external VuFind or ReShare instance

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -455,6 +455,8 @@ external_auth_scope_unique_id = "Read your unique identifier"
 external_auth_scopes_none = "none"
 external_auth_unauthorized = "You are not authorized to access licensed material"
 external_auth_unauthorized_desc = "Your login method does not provide access to licensed material. Please log out and then log in using another method."
+external_vufind_recommend_heading = "Borrow from a Partner Library"
+external_vufind_recommend_intro = '<a href="%%url%%" target="_blank">%%result_count%% result(s)</a> found at partner libraries.'
 facet_list_empty = "No data available"
 facet_list_for = "Facet list for %%field%%"
 FAQs = "FAQs"
