Update language files with lexvo.

--- a/languages/ISO639-3/ga.ini
+++ b/languages/ISO639-3/ga.ini
@@ -1,7 +1,9 @@
 aar = "Afáiris"
 abk = "Abcáisis"
+ady = "An Adyghe"
 afr = "Afracáinis"
 aka = "Acáinis"
+ale = "An Ailiúitis"
 amh = "Amáiris"
 ara = "Araibis"
 arg = "Aragóinis"
@@ -15,6 +17,7 @@ bam = "Bambairis"
 bel = "Bealarúisis"
 ben = "Beangáilis"
 bis = "Bioslaimis"
+blc = "Nuxálk"
 bod = "Tibéidis"
 bos = "Boisnis"
 bre = "Briotáinis"
@@ -25,6 +28,8 @@ cha = "Seamóiris"
 che = "Seisnis"
 chu = "Slavais na hEaglaise"
 chv = "Suvaisis"
+cmn = "Sínis"
+cop = "An Choptais"
 cor = "Coirnis"
 cos = "Corsaicis"
 cre = "Craís"
@@ -35,12 +40,15 @@ div = "Divéihis"
 dzo = "Seoinicis"
 ell = "Gréigis"
 eng = "Béarla"
+enm = "Meán-Bhéarla"
+epo = "Esperanto"
 est = "Eastóinis"
 eus = "Bascais"
 ewe = "Éabhais"
 fao = "Faróis"
 fas = "Peirsis"
 fij = "Fidsis"
+fil = "Filipínis"
 fin = "Fionlainnis"
 fra = "Fraincis"
 fry = "Freaslainnis Iartharach"
@@ -49,14 +57,20 @@ gla = "Gaeilge na hAlban"
 gle = "Gaeilge"
 glg = "Gailísis"
 glv = "Manainnis"
+grc = "An tSean-Ghréigis"
 grn = "Guaráinis"
+gsw = "Gearmáinis Elvéiseach"
+gug = "An Ghuaráinis"
 guj = "Gúisearáitis"
 hat = "Críol Háítí"
 hau = "Hásais"
+haw = "Haváíais"
 hbs = "Seirbis (Laidineach)"
 heb = "Eabhrais"
 her = "Heiréiris"
 hin = "Hiondúis"
+hit = "An Hitis"
+hix = "An Hixkaryana"
 hmo = "Motúis Hírí"
 hrv = "Cróitis"
 hun = "Ungáiris"
@@ -65,12 +79,15 @@ ibo = "Íogbóis"
 ido = "Ídis"
 iii = "Ís Shichuan"
 iku = "Ionúitis"
+ile = "An Interlingua"
+ina = "Interlingua"
 ind = "Indinéisis"
 ipk = "Iniúipiaicis"
 isl = "Íoslainnis"
 ita = "Iodáilis"
 jav = "Iáivis"
 jpn = "Seapáinis"
+kal = "Graonlainnis"
 kan = "Cannadais"
 kas = "Caismíris"
 kat = "Seoirsis"
@@ -80,23 +97,29 @@ khm = "Ciméiris"
 kik = "Ciocúis"
 kin = "Ciniaruaindis"
 kir = "Cirgisis"
+kky = "Guugu Yimidhirr"
 kom = "Coimis"
 kon = "Congóis"
 kor = "Cóiréis"
+krl = "An Chairéilis"
 kua = "Cuainiáimis"
 kur = "Coirdis"
 lao = "Laoisis"
 lat = "Laidin"
 lav = "Laitvis"
+lfn = "Lingua Franca Nova"
+lij = "An Mhonacais"
 lim = "Liombuirgis"
 lin = "Liongáilis"
 lit = "Liotuáinis"
 ltz = "Lucsambuirgis"
 lub = "Lúba-Cataingis"
 lug = "Lugandais"
+lvs = "An Laitvis"
 mah = "Mairsillis"
 mal = "Mailéalaimis"
 mar = "Maraitis"
+mga = "Meán-Ghaeilge"
 mkd = "Macadóinis"
 mlg = "Malagáisis"
 mlt = "Máltais"
@@ -109,20 +132,27 @@ nav = "Navachóis"
 nbl = "Ndeibéilis an Deiscirt"
 nde = "N-deibéilis an Tuaiscirt"
 ndo = "Ndongais"
+nds = "An Ghearmáinis Íochtarach"
 nep = "Neipeailis"
+new = "Nepal Bhasa"
+nio = "Nganasainis"
 nld = "Ollainnis"
+nmn = "!Xóõ"
 nno = "Nua-Ioruais"
 nob = "Bocmál"
 nor = "Ioruais"
 nya = "Siséivis"
 oci = "Ocsatáinis"
 oji = "Óisibis"
+ori = "Oraisis"
 orm = "Oraimis"
 oss = "Oiséitis"
 pan = "Puinseáibis"
+pap = "An Phaipeamaintis"
 pli = "Páilis"
 pol = "Polainnis"
 por = "Portaingéilis"
+pox = "An Pholáibis"
 pus = "Paistis"
 que = "Ceatsuais"
 roh = "Rómainis"
@@ -131,6 +161,9 @@ run = "Rúindis"
 rus = "Rúisis"
 sag = "Sangóis"
 san = "Sanscrait"
+scn = "An tSicilis"
+sco = "An Albainis"
+sga = "Sean-Ghaeilge"
 sin = "Siolóinis"
 slk = "Slóvaicis"
 slv = "Slóivéinis"
@@ -145,9 +178,12 @@ sqi = "Albáinis"
 srd = "Sairdínis"
 srp = "Seirbis"
 ssw = "Suaisis"
+sth = "An tSeiltis"
 sun = "Sundais"
 swa = "Svahaílis"
 swe = "Sualainnis"
+swh = "Svahaílis"
+syc = "Siricis"
 tah = "Taihítis"
 tam = "Tamailis"
 tat = "Tatairis"
@@ -156,23 +192,33 @@ tgk = "Taidsícis"
 tgl = "Filipínis"
 tha = "Téalainnis"
 tir = "Tigrinis"
+tlh = "Klingon"
 ton = "Tongais"
+tpi = "Tok Pisin"
 tsn = "Suáinis"
 tso = "Songais"
 tuk = "Tuircméinis"
 tur = "Tuircis"
 twi = "Acáinis"
+tyv = "An Túvais"
 uig = "Uigiúiris"
 ukr = "Úcráinis"
+und = "Teanga Anaithnid nó Neamhbhailí"
 urd = "Urdúis"
 uzb = "Úisbéiceastáinis"
+uzn = "Úisbéicis"
 ven = "Veindis"
 vie = "Vítneaimis"
+vol = "Volapük"
 wln = "Vallúnais"
 wol = "Volaifis"
+xcb = "An Cumbric"
 xho = "Cóisis"
+xlp = "An Leapóintis"
 yid = "Giúdais"
 yor = "Iarúibis"
 zha = "Siuáingis"
 zho = "Sínis"
+zsm = "Malaeis"
 zul = "Súlúis"
+zxx = "Gan ábhar teangeolaíoch"
