--- a/languages/ISO639-3/mn.ini
+++ b/languages/ISO639-3/mn.ini
@@ -29,6 +29,7 @@ cos = "корсик"
 cym = "уэльс"
 dan = "дани"
 deu = "герман"
+din = "Динка хэл"
 div = "дивехи"
 dzo = "зонха"
 ell = "грек"
@@ -100,6 +101,7 @@ mar = "марати"
 mkd = "македон"
 mlg = "малагаси"
 mlt = "малта"
+mnc = "Манж хэл"
 mon = "монгол"
 mri = "маори"
 msa = "малай"
@@ -114,6 +116,7 @@ nld = "нидерланд"
 nno = "норвегийн нинорск"
 nob = "норвегийн букмол"
 nor = "норвег"
+nso = "Хойд Сото хэл"
 nya = "нянжа"
 oci = "окситан"
 ori = "ория"
@@ -149,6 +152,7 @@ swa = "свахили"
 swe = "швед"
 tah = "таити"
 tam = "тамил"
+tat = "Татар хэл"
 tel = "тэлүгү"
 tgk = "тажик"
 tgl = "филипино"
@@ -169,6 +173,7 @@ vie = "вьетнам"
 vol = "волапюк"
 wln = "уоллун"
 wol = "волоф"
+xal = "Халимаг хэл"
 xho = "хоса"
 yid = "иддиш"
 yor = "ёруба"
