--- a/languages/ISO639-3/se.ini
+++ b/languages/ISO639-3/se.ini
@@ -91,6 +91,7 @@ chu = "girkoslávagiella"
 chv = "căvashla/čuvassigiella"
 chy = "tsėhésenėstsestȯtse/cheyennegiella"
 cmc = "čam-gielat"
+cmn = "kiinnágiella"
 cop = "qubtigiella"
 cor = "kernewek/kernowekgiella"
 cos = "corsugiella"
@@ -144,6 +145,7 @@ fat = "fanti/fantegiella"
 fij = "na vosa vaka-viti/fidžigiella"
 fil = "filipinogiella"
 fin = "suomagiella"
+fit = "Meängiella"
 fiu = "suoma-ugralaš gielat"
 fon = "fongiella"
 fra = "fránskkagiella"
@@ -221,6 +223,7 @@ iri = "nkarigwegiella"
 iro = "irokesa-gielat"
 isl = "islánddagiella"
 ita = "itáliagiella"
+izh = "Inkeroisgiella"
 jav = "jávagiella"
 jbo = "lojbangiella (goanstadahkkon giella)"
 jpn = "japánagiella"
@@ -239,6 +242,7 @@ kau = "kanurigiella"
 kaw = "kavigiella"
 kaz = "kazahkkagiella"
 kbd = "kabardigiella"
+kca = "Hantigiella"
 kha = "ka ktien khasi"
 khi = "khoisan-gielat"
 khm = "khmergiella"
@@ -247,6 +251,7 @@ kik = "gigujugiella"
 kin = "ikinyarwandagiella"
 kir = "kirgisagiella"
 kmb = "kimbundugiella"
+koi = "Komipermjakgiella"
 kok = "konkanigiella"
 kom = "komi-gielat (komipermjahkká, komi zyryan, komijazva)"
 kon = "kikongogiella"
@@ -274,16 +279,19 @@ lez = "lezgigiella"
 lim = "limburgagiella"
 lin = "nglala/lingalagiella"
 lit = "lietuvagiella"
+liv = "Liivigiella"
 lol = "lomongo/mongogiella"
 loz = "lozi/rozigiella"
 ltz = "luxemburggagiella"
 lua = "chiluba/luba-kasaigiella"
 lub = "kiluba/luba-katangagiella"
+lud = "Lyydigiella"
 lug = "olugandagiella"
 lui = "cham'teelagiella"
 lun = "chilundagiella"
 luo = "dholuogiella"
 lus = "mizo ṭawŋ"
+lvs = "Látviagiella"
 mac = "makedoniagiella"
 mad = "bhása madhurá"
 mag = "magadhigiella"
@@ -312,11 +320,14 @@ mlt = "malti/maltagiella"
 mnc = "manju gisun/mančugiella"
 mni = "meitheigiella"
 mno = "manobo-gielat"
+mns = "Mansigiella"
 moh = "kanienʼkéhagiella"
 mon = "mongolagiella"
 mos = "mooré/mossigiella"
 mri = "te reo/maoragiella"
+mrj = "Várremarigiella"
 msa = "bahasa melayu/malaijigiella"
+mtm = "Matorigiella"
 mul = "máŋggat gielat"
 mun = "mundagielat"
 mus = "mvskoke/muscogeegiella"
@@ -338,6 +349,7 @@ nep = "nepaligiella"
 new = "nepal bhasa/newarigiella"
 nia = "li niha/niasgiella"
 nic = "nigerilaš-kongolaš gielat"
+nio = "Nganasagiella"
 niu = "ko e vagahau niuē/niuegiella"
 nld = "hollándagiella"
 nno = "dárogiella, nynorsk"
@@ -356,6 +368,7 @@ nyo = "orunyoro/nyorogiella"
 nzi = "nzimagiella"
 oci = "oksitánagiella (1500-)"
 oji = "anishinaabemowin/ožibwagiella"
+olo = "Aunusgárjilgiella"
 ori = "orijagiella"
 orm = "afaan oromoo/oromogiella"
 osa = "wažáže ie/osagegiella"
@@ -378,6 +391,7 @@ pol = "polskagiella"
 pon = "lokaiahn pohnpei/pohnpeigiella"
 por = "portugalágiella"
 pra = "prakrit-gielat"
+prg = "Preussigiella"
 pro = "dološprovensálagiella (-1500)"
 pus = "paxto/paštugiella"
 que = "runasimi/ketšua-gielat"
@@ -403,16 +417,23 @@ sas = "sasakgiella"
 sat = "santaligiella"
 scn = "sicilianugiella"
 sco = "skottagiella"
+sdc = "Sassarigiella"
 sel = "selkupagiella"
 sem = "semalaš gielat"
 sga = "dološ iiragiella (-900)"
 sgn = "seavagielat"
 shn = "tai yai/shangiella"
 sho = "shangagiella"
+sia = "Áhkkilsámegiella"
 sid = "saidaamu afoo/sidamagiella"
 sin = "simhalagiella"
 sio = "siouan-catawba-gielat"
 sit = "sinotiibetlaš gielat"
+sjd = "Gielddasámegiella"
+sje = "Biđonsámegiella"
+sjk = "Giemasámegiella"
+sjt = "Darjjesámegiella"
+sju = "Ubmisámegiella"
 sla = "slávalaš gielat"
 slk = "slovahkkagiella"
 slo = "slovahkkagiella"
@@ -445,9 +466,11 @@ sun = "basa sunda"
 sus = "susu/sosoxuigiella"
 sux = "sumerigiella"
 swa = "kiswahiligiella"
+swb = "shimaorigiella"
 swe = "ruoŧagiella"
 syc = "dološsyriagiella"
 syr = "syriagiella"
+szl = "Silesiagiella"
 tag = "tagoigiella"
 tah = "reo tahiti"
 tai = "thaigielat"
@@ -494,9 +517,11 @@ urd = "urdugiella"
 uzb = "oʻzbekcha/uzbekkagiella"
 vai = "vaigiella"
 ven = "vendagiella"
+vep = "Vepsägiella"
 vie = "vietnamgiella"
 vol = "volapükgiella"
 vot = "vaďďa tšeeli/vatjagiella"
+vro = "Võrogiella"
 wak = "wakash-gielat"
 wal = "wolayittatto doona/wolaittagiella"
 war = "waraygiella"
@@ -512,6 +537,7 @@ yap = "thin nu wa’ab"
 yid = "jiddišgiella"
 yor = "edè yorùbá/jorubagiella"
 ypk = "jupihkkagielat"
+yue = "kantongiella"
 zap = "diidxazá/zapotehkagiella"
 zbl = "Bliss-symbolat"
 zen = "tuẓẓungiyya/zenagagiella"
