--- a/languages/ISO639-3/hy.ini
+++ b/languages/ISO639-3/hy.ini
@@ -1,12 +1,17 @@
 aar = "աֆարերեն"
 abk = "աբխազերեն"
+abq = "Աբազերեն"
 afr = "աֆրիկաանս"
 aka = "աքան"
+akk = "Աքքադերեն"
 amh = "ամհարերեն"
 ara = "արաբերեն"
 arg = "արագոներեն"
 asm = "ասամերեն"
+ast = "Աստուրիերեն"
 ava = "ավարերեն"
+ave = "Ավեստերեն"
+axm = "Միջին հայերեն"
 aym = "այմարա"
 aze = "ադրբեջաներեն"
 bak = "բաշկիրերեն"
@@ -22,8 +27,10 @@ cat = "կատալաներեն"
 ces = "չեխերեն"
 cha = "չամոռո"
 che = "չեչեներեն"
+chr = "Շէրոքի Լեզու"
 chu = "սլավոներեն, եկեղեցական"
 chv = "չուվաշերեն"
+cmn = "Չինարեն"
 cor = "կոռներեն"
 cos = "կորսիկերեն"
 cym = "ուելսերեն"
@@ -40,10 +47,12 @@ ewe = "էվե"
 fao = "ֆարյորերեն"
 fas = "պարսկերեն"
 fij = "ֆիջիերեն"
+fil = "Տագալերեն"
 fin = "ֆիններեն"
 fra = "ֆրանսերեն"
 fry = "արևմտաֆրիզերեն"
 ful = "ֆուլահ"
+fur = "Ֆրիուլիերեն"
 gla = "շոտլանդական գաելերեն"
 gle = "իռլանդերեն"
 glg = "գալիսերեն"
@@ -76,6 +85,7 @@ kas = "քաշմիրերեն"
 kat = "վրացերեն"
 kau = "կանուրի"
 kaz = "ղազախերեն"
+kdr = "Կարաիմերեն"
 khm = "քմերերեն"
 kik = "կիկույու"
 kin = "կինյառուանդա"
@@ -108,6 +118,7 @@ nav = "նավախո"
 nbl = "հարավային նդեբելե"
 nde = "հյուսիսային նդեբելե"
 ndo = "նդոնգա"
+nds = "Ստորին գերմաներեն"
 nep = "նեպալերեն"
 nld = "հոլանդերեն"
 nno = "նոր նորվեգերեն"
@@ -119,18 +130,21 @@ oji = "օջիբվա"
 ori = "օրիյա"
 orm = "օրոմո"
 oss = "օսերեն"
+pal = "Պահլավերեն"
 pan = "փենջաբերեն"
 pli = "պալի"
 pol = "լեհերեն"
 por = "պորտուգալերեն"
 pus = "փուշթու"
 que = "կեչուա"
+rmi = "Լոմավրեն"
 roh = "ռոմանշերեն"
 ron = "ռումիներեն"
 run = "ռունդի"
 rus = "ռուսերեն"
 sag = "սանգո"
 san = "սանսկրիտ"
+sco = "Շոտլանդերեն"
 sin = "սինհալերեն"
 slk = "սլովակերեն"
 slv = "սլովեներեն"
@@ -145,9 +159,13 @@ sqi = "ալբաներեն"
 srd = "սարդիներեն"
 srp = "սերբերեն"
 ssw = "սվազերեն"
+stq = "Սաթերլանդ ֆրիզերեն"
 sun = "սունդաներեն"
+sva = "Սվաներեն"
 swa = "սուահիլի"
 swe = "շվեդերեն"
+swh = "Սուահիլի"
+szl = "Սիլեզերեն"
 tah = "թաիտերեն"
 tam = "թամիլերեն"
 tat = "թաթարերեն"
@@ -156,6 +174,7 @@ tgk = "տաջիկերեն"
 tgl = "ֆիլիպիներեն"
 tha = "թայերեն"
 tir = "տիգրինյա"
+tlh = "Կլինգոն"
 ton = "տոնգերեն"
 tsn = "ցվանա"
 tso = "ցոնգա"
@@ -166,14 +185,21 @@ uig = "ույղուրերեն"
 ukr = "ուկրաիներեն"
 urd = "ուրդու"
 uzb = "ուզբեկերեն"
+uzn = "Ուզբեկերեն"
 ven = "վենդա"
 vie = "վիետնամերեն"
 vol = "վոլապյուկ"
 wln = "վալոներեն"
 wol = "վոլոֆ"
+xag = "Աղվաներեն"
+xcl = "Գրաբար"
 xho = "քոսա"
+xme = "Մարերեն"
+xmf = "Մեգրելերեն"
 yid = "իդիշ"
 yor = "յորուբա"
+zea = "Զեյլանդերեն"
 zha = "ժուանգ"
 zho = "չինարեն"
+zsm = "Մալայերեն"
 zul = "զուլուերեն"
