--- a/languages/ISO639-3/sv.ini
+++ b/languages/ISO639-3/sv.ini
@@ -1,12 +1,17 @@
 ; Languages
 ___ = "uppgift saknas"
+aae = "Arberesjiska"
 aap = "Pará Arára"
 aar = "afar"
+aat = "Arvanitiska"
 abh = "Tajiki Arabic"
 abk = "abchaziska"
+abq = "Abazinska"
 ace = "achinese"
 ach = "acoli"
+acm = "Irakisk arabiska"
 ada = "adangme"
+adt = "Adnyamathanha"
 ady = "adygeiska"
 aen = "Armenian Sign Language"
 afa = "afro-asiatiskt språk"
@@ -14,27 +19,39 @@ afg = "Afghan Sign Language"
 afh = "afrihili (konstgjort språk)"
 afr = "afrikaans"
 age = "Angal"
+agq = "aghem"
+ahk = "Akha"
+aid = "Alngith"
 ail = "Aimele"
 ain = "ainu"
 ait = "Arikem"
 aka = "akan"
 akk = "akkadiska"
+akm = "Aka-Bo"
 aks = "Akaselem"
 ala = "Alago"
 alb = "albanska"
+alc = "Qawasqar"
 ale = "aleutiska"
 alg = "algonkinskt språk"
 ali = "Amaimon"
 all = "allar"
+aln = "Gegiska"
+alq = "Algonkinska"
+alr = "Alutor"
 als = "Toskiska"
 alt = "altaiska"
+amg = "Amurdag"
 amh = "amhariska"
+ami = "Amis"
 amk = "Ambai"
+amz = "Atampaya"
 and = "Ansus"
 ang = "fornengelska (n. 450-1100)"
 anh = "Nend"
 ani = "Andi"
 anj = "Anor"
+anm = "Anal"
 ann = "Obolo"
 ano = "Andoque"
 anp = "angika"
@@ -51,10 +68,15 @@ ari = "Arikara"
 arm = "armeniska"
 arn = "araukanska (mapuche)"
 arp = "arapaho"
+arq = "Algerisk arabiska"
 arr = "Karo"
 art = "konstgjort språk"
 aru = "Aruá"
 arw = "arawakiska"
+ary = "Marockansk arabiska"
+arz = "Egyptisk arabiska"
+asa = "asu"
+ase = "ASL"
 ash = "Abishira"
 ask = "Ashkun"
 asl = "Asilulu"
@@ -72,6 +94,7 @@ ava = "avariskt språk"
 ave = "avestiska"
 awa = "awadhi"
 awe = "Awetí"
+awk = "Awabakal"
 aym = "aymara"
 aze = "azerbajdzjanska"
 bad = "bandaspråk"
@@ -87,43 +110,72 @@ baq = "baskiska"
 bas = "basa (bantuspråk)"
 bat = "baltiskt språk"
 bau = "Bada"
+bax = "bamunska"
+bbc = "Toba batak"
+bbj = "ghomala"
+bci = "Baule"
+bcj = "Bardi"
+bdy = "Bandjalang"
 bej = "beyja"
 bel = "vitryska"
 bem = "bemba"
 ben = "bengali"
 ber = "berberspråk"
+bez = "bena"
+bfd = "bafut"
+bfi = "British Sign Language"
+bfq = "Badaga"
 bho = "bhojpuri"
+bia = "Badimaya"
 bih = "bihari"
 bik = "bikol"
 bin = "edo (bini)"
 bis = "bislama"
+bjg = "Bijago"
+bjn = "Banjaresiska"
+bkm = "bamekon"
 bla = "svartfotindianernas språk (Siksika)"
 bnt = "bantuspråk"
 bod = "tibetanska"
 bol = "Bole"
 bos = "bosniska"
+bpt = "Barrow point"
+bpy = "Bishnupriya manipuri"
 bqa = "Tchumbuli"
 bra = "braj"
 bre = "bretonska"
+brh = "Brahui"
+brx = "Bodo"
+bsk = "Burushaski"
+bss = "bakossi"
 bsw = "Baiso"
 btk = "batak"
 bua = "burjatiska"
 bug = "buginesiska"
 bul = "bulgariska"
+bum = "boulou"
 bur = "burmanska"
 byn = "bilin"
+byv = "bagangte"
 cab = "Garifuna"
 cad = "caddo"
 cai = "centralamerikanskt indianspråk"
+cak = "Cakchiquel"
+cal = "Karoliniska"
 cam = "Cemuhî"
 car = "karibiska"
 cas = "tsimané"
 cat = "katalanska"
 cau = "kaukasiskt språk"
+cay = "cayuga"
+cbk = "Chavacano"
+cch = "atsam"
+cde = "Chenchu"
 ceb = "cebuano"
 cel = "keltiskt språk"
 cen = "Cen"
 ces = "tjeckiska"
+cgg = "chiga"
 cha = "chamorro"
 chb = "chibcha"
 che = "tjetjenska"
@@ -138,17 +190,26 @@ chr = "cherokesiska"
 chu = "fornkyrkslaviska"
 chv = "tjuvasjiska"
 chy = "cheyenne"
+cia = "Cia-Cia"
+cjy = "Jin"
 ckb = "sorani"
+ckt = "Tjuktjiska"
 cmc = "chamic"
+cmn = "Mandarin"
+cms = "Messapiska"
+coc = "Cucapa"
 con = "Cofán"
 cop = "koptiska"
 cor = "korniska"
 cos = "korsikanska"
 cpe = "pidgin-engelska"
 cpf = "franskt kreolspråk"
+cpg = "Kappadokiska"
+cpi = "Pidginengelska"
 cpp = "portugisiskt kreolspråk"
 cre = "cree"
 crf = "Caramanta"
+crg = "Michif"
 crh = "krimtatariska (krimturkiska)"
 cro = "crow"
 crp = "kreol-/pidginspråk"
@@ -158,12 +219,15 @@ csn = "Colombian Sign Language"
 cus = "kusjitiskt språk"
 cym = "kymriska"
 cze = "tjeckiska"
+czh = "Hui"
+daf = "Dan"
 dag = "Dagbani"
 dak = "dakota"
 dan = "danska"
 dar = "darginska"
 dav = "taita"
 day = "dayak"
+dbl = "Dyirbal"
 dee = "Dewoin"
 del = "delaware"
 den = "slave"
@@ -172,9 +236,14 @@ des = "Desano"
 deu = "tyska"
 dgr = "dogrib"
 dic = "Lakota Dida"
+dif = "Dieri"
 din = "dinka"
 dis = "Dimasa"
 div = "divehi"
+dje = "zarma"
+djl = "Djiwarli"
+djw = "Djawi"
+dlm = "Dalmatiska"
 dng = "Dungan"
 doi = "dogri"
 dpe = "dari"
@@ -188,13 +257,19 @@ dua = "duala"
 due = "Umiray Dumaget Agta"
 duf = "Drubea"
 dui = "Dumun"
+duj = "Dhuwal"
 dum = "medelnederländska (ca 1050-1350)"
 dur = "Dii"
 dus = "Dumi"
 dut = "nederländska"
+dyd = "Dyugun"
+dyo = "jola-fonyi"
 dyu = "dyula"
+dyy = "Dyaabugay"
+dzg = "dazaga"
 dzo = "bhutanesiska (dzongkha)"
 ebg = "Ebughu"
+ebu = "embu"
 eee = "E"
 efi = "efik"
 egy = "fornegyptiska"
@@ -231,6 +306,8 @@ eve = "Even"
 evn = "Evenki"
 ewe = "ewe"
 ewo = "ewondo"
+ext = "Extremaduriska"
+eya = "Eyak"
 fan = "fang"
 fao = "färöiska"
 far = "fataleka"
@@ -243,7 +320,9 @@ fil = "filipino"
 fin = "finska"
 fit = "Meänkieli"
 fiu = "finsk-ugriskt språk"
+fkv = "Kvänska"
 fla = "Kalispel-Pend d'Oreille"
+fng = "Fanagalo"
 fom = "Foma"
 fon = "fon"
 for = "Fore"
@@ -258,6 +337,7 @@ frs = "östfrisiska"
 fry = "frisiska"
 fse = "Finnish Sign Language"
 fub = "Adamawa Fulfulde"
+fuc = "Pulaar"
 fuh = "Western Niger Fulfulde"
 ful = "fulani"
 fun = "Fulniô"
@@ -267,10 +347,14 @@ gae = "guarequena"
 gag = "gagauz"
 gai = "Borei"
 gal = "galoli"
+gan = "Gan"
 gar = "Galeya"
 gay = "gayo"
 gba = "gbaya"
+gbd = "Karadjeri"
 gdh = "Gadjerawang"
+gdm = "Laal"
+gdq = "Sydarabiska språk"
 geb = "Kire"
 ged = "Gade"
 gem = "germanskt språk"
@@ -278,7 +362,9 @@ geo = "georgiska"
 ger = "tyska"
 gez = "fornetiopiska (geez)"
 gge = "Guragone"
+ggr = "Aghu tharnggalu"
 ght = "Kuke"
+gia = "Kitja"
 gil = "gilbertesiska"
 gin = "Hinukh"
 gla = "höglandsskotska"
@@ -286,8 +372,10 @@ glc = "Bon Gula"
 gld = "Nanai"
 gle = "iriska"
 glg = "galiciska"
+glk = "Gilaki"
 glv = "manx"
 gmh = "medelhögtyska (ca 1050-1500)"
+gni = "Gooniyandi"
 gnt = "Guntai"
 goh = "fornhögtyska (ca 750-1050)"
 gon = "gondi"
@@ -298,20 +386,29 @@ grc = "grekiska, klassisk (-1453)"
 gre = "nygrekiska (1453-)"
 grn = "guarani"
 gro = "Groma"
+grt = "Garo"
 gsw = "schweizertyska"
 gua = "shiki"
+gug = "Guaraní"
 guj = "gujarati"
+gup = "Gunwinggu"
 guw = "Gun"
+guz = "gusli"
 gwe = "Gweno"
 gwi = "gwichin"
+gyd = "Kayardild"
+hac = "Gurani"
 hai = "haida"
+hak = "Hakka"
 haq = "Ha"
 hat = "haitiska"
 hau = "haussa"
 haw = "hawaiiska"
+hbo = "Bibelhebreiska"
 hbs = "serbiska (latinska)"
 heb = "hebreiska"
 her = "herero"
+hif = "Fijiansk hindi"
 hil = "hiligaynon"
 him = "pahari (himachali)"
 hin = "hindi"
@@ -324,6 +421,8 @@ hrc = "Niwer Mil"
 hrp = "Nhirrpi"
 hrv = "kroatiska"
 hsb = "högsorbiska"
+hsn = "Xiang"
+hts = "Hadza"
 hue = "San Francisco Del Mar Huave"
 hug = "Huachipaeri"
 hui = "Huli"
@@ -333,8 +432,10 @@ hut = "Humla"
 hye = "armeniska"
 iba = "iban"
 ibb = "ibibio"
+ibd = "Iwaidja"
 ibo = "ibo (igbo)"
 ice = "isländska"
+icl = "Isländskt teckenspråk"
 ido = "ido"
 iii = "sichuan yi"
 ijo = "ijo"
@@ -358,23 +459,30 @@ iro = "irokesiskt språk"
 isa = "Isabi"
 ise = "Italian Sign Language"
 isl = "isländska"
+ist = "Istriotiska"
 ita = "italienska"
 ite = "Itene"
 its = "Isekiri"
 izh = "Ingriska"
 jab = "Hyam"
+jam = "Patwa"
 jao = "Yanyuwa"
 jav = "javanska"
+jay = "Yan-nhangu"
 jbo = "lojban (konstgjort språk)"
 jge = "Judeo-Georgian"
 jid = "Bu"
+jkr = "Koro"
+jmc = "kimashami"
 jpa = "Jewish Palestinian Aramaic"
 jpn = "japanska"
 jpr = "judepersiska"
 jrb = "judearabiska"
+jut = "Jylländska"
 kaa = "karakalpakiska"
 kab = "kabyliska"
 kac = "kachin"
+kaj = "jju"
 kak = "Kayapa Kallahan"
 kal = "grönländska (kalaallit oqaasi)"
 kam = "kamba"
@@ -386,23 +494,43 @@ kau = "kanuri"
 kaw = "fornjavanska (kawi)"
 kaz = "kazakiska"
 kbd = "kabardinska (östtjerkessiska)"
+kbl = "kanembu"
 kca = "hantiskt språk"
+kcg = "tyap"
+kck = "Kalanga"
+kda = "Worimi"
+kdd = "Yankunytjatjara"
+kde = "makonde"
+kdr = "Karaimiska"
+kea = "Kap Verde-kreol"
 kel = "Kela"
 ket = "Ketiska"
+kfa = "Kodava takk"
+kfd = "Korraga korra"
+kfo = "koro"
+kgg = "Kusunda"
 kha = "khasi"
+khb = "Tai lü"
 khi = "khoisanspråk"
 khm = "kambodjanska (khmer)"
 kho = "sakiska (khotanesiska)"
+khq = "Timbuktu-songhoy"
 kie = "kibet"
 kii = "Kitsai"
 kik = "kikuyu"
 kin = "rwanda"
 kir = "kirgisiska"
+kjg = "Kammu"
 kjr = "Kurudu"
 kki = "Kagulu"
+kkj = "mkako"
+kky = "Guguyimidjir"
 kla = "Klamath-Modoc"
+kld = "Gamilaraay"
+kln = "kalenjin"
 kmb = "mbundu (kimbundu)"
 kmr = "kurmanji"
+knn = "konkani"
 kok = "konkani"
 kom = "komi"
 kon = "kikongo"
@@ -410,13 +538,19 @@ kor = "koreanska"
 kos = "kusaie"
 kpe = "kpelle"
 kpv = "Komi-Zyrian"
+kpy = "Korjakiska"
 krc = "karachary-balkar"
 kre = "Panará"
 krj = "Kinaray-A"
+krk = "Kerek"
 krl = "karelska"
 kro = "kru-språk"
 kru = "kurukh"
+ksb = "kisambaa"
+ksf = "bafia"
+ksh = "kölniska"
 ksi = "Krisa"
+ktg = "Kalkutung"
 kua = "ovambo (kuanjama)"
 kum = "kumyk"
 kur = "kurdiska"
@@ -426,6 +560,7 @@ kwn = "Kwangali"
 lab = "Linear A"
 lad = "spanjolska (ladino)"
 laf = "Lafofa"
+lag = "langi"
 lah = "lahnda"
 lai = "Lambya"
 lam = "lamba (Zambia och Kongo)"
@@ -435,28 +570,40 @@ lap = "laka"
 lat = "latin"
 lav = "lettiska"
 lbe = "Lak"
+lbz = "Lardil"
 lel = "Lele"
 len = "Lenca"
 let = "Amio-Gelimi"
 lez = "lezginska"
+lfn = "Lingua Franca Nova"
 lgr = "Lengo"
+lhs = "Mlahsö"
 lia = "West-Central Limba"
 lic = "Hlai"
 lie = "Likila"
+lif = "Limbu"
+lij = "Monegaskiska"
 lik = "Lika"
 lim = "limburgisch"
 lin = "lingala"
 lis = "Lisu"
 lit = "litauiska"
 liv = "liviska"
+ljp = "Lampung"
+lki = "Lekî"
+lkt = "Lakota"
 lld = "Ladinska"
 lle = "Lele"
+lmo = "Lombardiska"
+lnj = "Leningitij"
 lol = "lolo (mongo)"
 loo = "Lombo"
 lor = "Téén"
 lov = "Lopi"
 low = "Tampias Lobu"
 loz = "lozi"
+lrg = "Laragiya"
+ltc = "Medeltidskinesiska"
 ltz = "luxemburgiska (Letzebüergesch)"
 lua = "luba-lulua"
 lub = "luba-katanga"
@@ -466,8 +613,13 @@ lui = "luiseno"
 lun = "lunda"
 luo = "luo (Kenya och Tanzania)"
 lus = "mizo (lushai)"
+luy = "Luhya"
+lvs = "Lettiska"
+lzh = "Klassisk kinesiska"
+lzz = "Laziska"
 mac = "makedonska"
 mad = "madurese"
+maf = "mafa"
 mag = "magahi"
 mah = "marshallesiska"
 mai = "maithili"
@@ -479,15 +631,22 @@ map = "austronesiskt språk"
 mar = "marathi"
 mas = "maasai"
 may = "malajiska"
+mde = "maba"
 mdf = "moksha"
 mdr = "mandar"
 mdz = "Suruí Do Pará"
 men = "mende"
+mep = "Miriwung"
+mer = "meru"
 mes = "Masmaje"
+mey = "Hassaniyya"
+mfe = "mauritansk kreol"
 mga = "medeliriska (ca 1100-1550)"
+mgh = "makhuwa-meetto"
 mhr = "Eastern Mari"
 mic = "mic-mac"
 min = "minangkabau"
+miq = "Miskito"
 mis = "övriga språk"
 mkd = "makedonska"
 mkh = "mon-khmerspråk"
@@ -497,15 +656,19 @@ mlt = "maltesiska"
 mnc = "manchu"
 mne = "Naba"
 mni = "manipuri"
+mnk = "Mandinka"
 mno = "manobospråk"
 mns = "Mansiska"
 moh = "mohawk"
 mon = "mongoliskt språk"
 moo = "Monom"
 mos = "mossi"
+mpb = "Mullukmulluk"
 mri = "maori"
 mrj = "Västmariska"
+mrr = "Gond#Dialekter"
 msa = "malajiska"
+mua = "mundang"
 mui = "Musi"
 mul = "flerspråkigt verk"
 mun = "munda"
@@ -515,18 +678,28 @@ muu = "Yaaku"
 mvl = "Mbara"
 mvr = "Marau"
 mwe = "Mwera"
+mwf = "Murrinh-Patha"
 mwl = "mirandese"
+mwp = "Kala Lagaw Ya"
 mwr = "marwari"
+mxi = "Mozarabiska"
 mya = "burmanska"
+mye = "myene"
 myn = "maya-språk"
+myp = "Pirahã"
 myv = "erzya"
+mzn = "Mazenderani"
 nah = "nahuatl"
 nai = "nordamerikanskt indianspråk"
 nam = "Nagikurrunggurr"
+nan = "Minnan"
 nap = "neapolitansk italienska"
+naq = "nama"
 nau = "nauruanska"
 nav = "navaho"
+nbg = "Gond#Dialekter"
 nbl = "ndebele (Sydafrika)"
+ncs = "Nicaraguanskt teckenspråk"
 nde = "ndebele (Zimbabwe)"
 ndg = "Ndengereko"
 ndl = "Ndolo"
@@ -538,12 +711,16 @@ nem = "Nemi"
 nen = "Nengone"
 nep = "nepali"
 new = "newari"
+nfr = "Nafaanra"
 ngd = "Ngando"
 nge = "Ngemba"
 ngg = "Ngbaka Manza"
+ngh = "Nǀu"
+ngk = "Ngalkbun"
 ngl = "Lomwe"
 ngn = "Ngwo"
 ngu = "Guerrero Nahuatl"
+nha = "Nhanda"
 nia = "nias"
 nic = "niger-/kongospråk"
 nid = "Ngandi"
@@ -553,13 +730,20 @@ nin = "Ninzo"
 nio = "Nganasaniska"
 nis = "Nimi"
 niu = "niuean"
+niv = "Nivchiska"
 njm = "Angami Naga"
 nka = "Nkoya"
 nke = "Duke"
 nld = "nederländska"
 nli = "Grangali"
+nlr = "Ngarla"
+nmg = "kwasio"
+nmn = "!Xóõ"
+nna = "Nyangumarta"
 nne = "Ngandyera"
+nnh = "bamileké-ngiemboon"
 nno = "nynorsk"
+nnv = "Nugunu"
 nob = "bokmål"
 noe = "Nimadi"
 nof = "Nomane"
@@ -569,23 +753,34 @@ non = "fornisländska"
 nor = "norska"
 nos = "Eastern Nisu"
 not = "Nomatsiguenga"
+nov = "Novial"
 nqo = "n'ko"
+nrn = "Norn"
 nsk = "Naskapi"
 nso = "nordsotho"
 nti = "Natioro"
 nub = "nubiskt språk"
 nul = "Nusa Laut"
 nur = "Nukuria"
+nus = "nuer"
 nwc = "fornnewari"
+nxn = "Ngawun"
 nya = "njandza"
+nyh = "Nyigina"
 nym = "nyamwezi"
 nyn = "nyankole"
 nyo = "nyoro"
+nyv = "Nyulnyul"
 nyy = "Nyakyusa-Ngonde"
 nzi = "nzima"
+nzs = "Nyzeeländskt teckenspråk"
+och = "Fornkinesiska"
 oci = "Langue d'oc (1500-)"
+oge = "Gammalgeorgiska"
 oji = "odjibwa (chippewa)"
+ojp = "Klassisk japanska"
 olo = "Livvi"
+ona = "Ona"
 one = "Oneida"
 ong = "Olo"
 ood = "Tohono O'odham"
@@ -595,8 +790,11 @@ ori = "oriya"
 orm = "oromo"
 oro = "Orokolo"
 osa = "osage"
+osc = "Oskiska"
+osp = "Fornspanska"
 oss = "ossetiska"
 ost = "Osatu"
+osx = "Fornsaxiska"
 ota = "ottomanska (1500-1928)"
 oto = "otomispråk"
 paa = "papuanskt språk"
@@ -610,28 +808,44 @@ pap = "papiamento"
 pas = "Papasena"
 pau = "palauan"
 pcc = "Bouyei"
+pcd = "Pikardiska"
+pdc = "Pennsylvaniatyska"
 peo = "fornpersiska (ca 600-400 f.Kr.)"
 per = "persiska"
 phi = "filippinskt språk"
 phn = "feniciska"
 pho = "Phunoi"
+pih = "Pitcairnesiska"
+pit = "Pitta pitta"
+piu = "Pintupi-luritja"
+pjt = "Pitjantjatjara"
 pka = "Jain Prakrit"
 ple = "Palu'e"
 pli = "pali"
+plq = "Palaiska"
+pmh = "Maharashtri"
 pmo = "Pom"
+pms = "Piemontesiska"
+pnt = "Pontisk grekiska"
+pnw = "Panytyima"
 pol = "polska"
 pon = "ponape"
 por = "portugisiska"
 pot = "Potawatomi"
+pox = "Polabiska"
 ppi = "Paipai"
 pra = "prakritspråk"
+prg = "Prusiska"
 pro = "provensalska (-1500)"
 prs = "Dari"
 prt = "Phai"
 psa = "Asue Awyu"
+psd = "Indianernas teckenspråk"
 puo = "Puoc"
 pus = "pashto"
+quc = "Quiché"
 que = "quechua"
+qya = "Quenya"
 raj = "rajasthani"
 ran = "riantana"
 rap = "rapanui"
@@ -640,12 +854,16 @@ rea = "Rerau"
 ree = "Rejang Kayan"
 reg = "Kara"
 rei = "Reli"
+rej = "Rejang"
 ren = "Rengao"
 res = "Reshe"
 rin = "Nungu"
 rit = "Ritarungo"
+rmi = "Lomavren"
+rmu = "Svensk romani"
 rng = "Ronga"
 roa = "romanskt språk"
+rof = "rombo"
 roh = "rätoromanska"
 rom = "romani"
 ron = "rumänska"
@@ -656,6 +874,7 @@ run = "rundi"
 ruo = "Istrorumänska"
 rup = "arumanska"
 rus = "ryska"
+rwk = "rwa"
 rys = "Yaeyama"
 saa = "Saba"
 sad = "sandawe"
@@ -666,31 +885,48 @@ sak = "Sake"
 sal = "saliskt språk"
 sam = "samaritanska"
 san = "sanskrit"
+saq = "samburu"
 sar = "Saraveca"
 sas = "sasak"
 sat = "santali"
+saz = "Saurashtra"
+sba = "ngambay"
+sbp = "sangu"
+sbv = "Sabiner"
 scn = "siciliansk italienska"
 sco = "skotska"
 sed = "Sedang"
 see = "seneca"
+seh = "chisena"
 sel = "selkup"
 sem = "semitiskt språk"
 ser = "serrano"
+ses = "Gao-songhay"
 seu = "Serui-Laut"
 sew = "Sewa Bay"
 sga = "forniriska (-900)"
 sgn = "teckenspråk"
+sgs = "Žemaitiska"
+shh = "Shoshone"
+shi = "tachelhit"
 shn = "shan"
 sho = "Shanga"
+shu = "Chad-arabiska"
 sia = "Akkalasamiska"
 sid = "sidami"
 sii = "Shom Peng"
 sil = "Tumulung Sisaala"
 sin = "singalesiska"
 sio = "sioux-språk"
+sip = "Sikkimesiska"
 sis = "Siuslaw"
 sit = "sinotibetanskt språk"
 sjd = "Kildinsamiska"
+sje = "Pitesamiska"
+sjk = "Kemisamiska"
+sjn = "Sindarin"
+sjo = "Sibe"
+sjt = "Tersamiska"
 sju = "Umesamiska"
 ska = "skagit"
 sla = "slaviskt språk"
@@ -721,6 +957,7 @@ spd = "Saep"
 spe = "Sepa"
 spr = "Saparua"
 sqi = "albanska"
+squ = "Squamish"
 srb = "Sora"
 src = "Logudorese dialect"
 srd = "sardiska"
@@ -731,24 +968,34 @@ srv = "Southern Sorsoganon"
 ssa = "nilo-sahariskt språk"
 sso = "Sissano"
 ssw = "swazi"
+ssy = "saho"
 sti = "Bulo Stieng"
+stq = "Saterfrisiska"
 stv = "Silt'e"
 suk = "sukuma"
 sun = "sundanesiska"
 sus = "susu"
 sux = "sumeriska"
+sva = "Svanetiska"
 sve = "serili"
 svk = "Slovakian Sign Language"
 swa = "swahili"
+swb = "shimaoré"
+swc = "Kongo-swahili"
 swe = "svenska"
 swf = "Sere"
+swh = "swahili"
 swl = "Svenskt teckenspråk"
 swr = "Saweru"
 sws = "Seluwasan"
 sww = "Sowa"
+sxc = "Sikaner"
+sxu = "Sachsiska"
 syc = "syriska (klassisk)"
+syl = "Syloti"
 syr = "syriska (modern)"
 sze = "Seze"
+szl = "Schlesiska"
 tag = "Tagoi"
 tah = "tahitiska"
 tai = "thaispråk"
@@ -758,11 +1005,16 @@ tan = "tangale"
 tas = "Tay Boi"
 tat = "tatariska"
 tay = "Atayal"
+tbh = "Thurawal"
 tch = "Turks And Caicos Creole English"
+tcy = "Tulu"
 tcz = "Thado Chin"
+tdd = "Tai nüa"
+teh = "Tehuelche"
 tek = "Ibali Teke"
 tel = "telugo"
 tem = "temne"
+teo = "Ateso"
 ter = "tereno"
 tet = "tetum"
 tfr = "Teribe"
@@ -778,6 +1030,8 @@ tin = "Tindi"
 tir = "tigrinja"
 tit = "Tinigua"
 tiv = "tivi"
+tiw = "Tiwi"
+tju = "Tjurruru"
 tkl = "tokelauiska"
 tlh = "klingon (konstgjort språk)"
 tli = "tlingit"
@@ -787,9 +1041,11 @@ tog = "tonga (Nyasa)"
 toi = "Tonga"
 ton = "tonga (Tongaöarna)"
 tpi = "tok pisin"
+tqw = "Tonkawa"
 tra = "Tirahi"
 tre = "East Tarangan"
 tru = "Surayt"
+trv = "taroko"
 tse = "tunisiskt teckenspråk"
 tsi = "tsimshian"
 tsn = "tswana"
@@ -808,8 +1064,13 @@ tuu = "Tututni"
 tuv = "Turkana"
 tvl = "tuvaluan"
 twi = "twi"
+twq = "tasawaq"
+txh = "Thrakiska"
+typ = "Thaypan"
 tys = "Tày Sa Pa"
 tyv = "tuva"
+tzm = "centralmarockansk tamazight"
+uby = "Ubychiska"
 udi = "Udi"
 udm = "udmurtiska (votjakiska)"
 uga = "ugaritiska"
@@ -818,6 +1079,8 @@ ukr = "ukrainska"
 ulk = "Meriam"
 umb = "umbundu"
 umd = "Umbindhamu"
+umr = "Umbugarla"
+umu = "Munsee"
 und = "odefinierat språk"
 ung = "Ngarinyin"
 unk = "Enawené-Nawé"
@@ -826,51 +1089,116 @@ urd = "urdu"
 uru = "Urumi"
 uur = "Ura"
 uuu = "U"
+uwa = "Kuku-uwanh"
 uzb = "uzbekiska"
+uzn = "uzbekiska"
 vai = "vaj"
 val = "Vehes"
+var = "Huarijio"
+vec = "Venetianska"
 ven = "venda"
 vep = "vepsiska"
 vie = "vietnamesiska"
 vis = "Vishavan"
+vku = "Kurrama"
+vls = "Flamländska"
+vmb = "Mbabaram"
 vol = "volapük"
 vot = "votiska"
+vro = "Võru"
+vun = "vunjo"
+wae = "walsertyska"
 wak = "wakusjiskt språk"
 wal = "walamo"
 wam = "Wampanoag"
+waq = "Wagiman"
 war = "waray"
 was = "washo"
 wbf = "Wara"
+wbp = "Warlpiri"
+wbv = "Wajarri"
 wbw = "Woi"
 wed = "Wedau"
 weg = "Wergaia"
 wei = "Kiunum"
 wel = "kymriska"
 wen = "sorbiskt (vendiskt) språk"
+wep = "Westfaliska"
 wer = "Weri"
+wig = "Wik-ngathana"
+wim = "Wik-mungkan"
 wln = "vallonska"
 wlx = "Wali"
+wmb = "Wambaya"
+wmt = "Walmajarri"
 wng = "Wanggom"
 wol = "wolof"
 wor = "Woria"
+wrb = "Warluwara"
+wrh = "Wiradhuri"
+wrl = "Warlmanpa"
+wrm = "Warumungu"
+wrr = "Wardaman"
+wuu = "Wu"
+wwr = "Nyulnyulanska språk"
+wyb = "Wangaaybuwan-ngiyambaa"
 xal = "kalmuckiska"
+xcb = "Kumbriska"
+xcr = "Kariska"
+xfa = "Faliskiska"
 xho = "xhosa"
+xhu = "Hurritiska"
+xil = "Illyriska"
+xlc = "Lykiska"
+xld = "Lydiska"
+xlg = "Fornliguriska"
+xmf = "Megreliska"
+xmk = "Fornmakedonska"
+xmu = "Kamu"
+xno = "Anglo-normandiska"
+xog = "lusoga"
+xpi = "Piktiska"
+xpr = "Partiska"
+xsv = "Sudoviska"
+xum = "Umbriska"
+xur = "Urarteiska"
+xve = "Venetiska"
+xzh = "Zhang-Zhung"
+yai = "Yaghnobi"
 yao = "yao (Afrika)"
 yap = "Yap"
+yav = "yangben"
+ybb = "bamileké-jemba"
 yel = "Yela"
+yia = "Yinggarda"
 yid = "jiddisch"
+yii = "Yidiny"
+yij = "Yindjibarndi"
+yiy = "Yir-yoront"
+ykg = "Nordjukagiriska"
+ylr = "Yalarnnga"
+ymm = "May"
 yor = "yoruba"
 ypk = "eskimåspråk (yupik-språk)"
 yrk = "Nenets"
+yua = "Yukatek"
+yub = "Yugambal"
+yuc = "Yuchi"
 yue = "kantonesiska"
+yux = "Sydjukagiriska"
 yva = "Yawa"
 zap = "zapotek"
 zbl = "Blissymboler"
+zea = "Zeeländska"
 zen = "zenaga"
 zha = "zhuang"
 zho = "kinesiska"
 zkk = "Karankawa"
+zml = "Madngele"
+zmu = "Muruwari"
 znd = "zandespråk"
+zrp = "Zarfatiska"
+zsm = "malajiska"
 zul = "zulu"
 zun = "zuni"
 zwa = "Zay"
