Add attribution details.

--- a/languages/ISO639-3/el.ini
+++ b/languages/ISO639-3/el.ini
@@ -1,3 +1,6 @@
+; Some data in this file is derived from the Lexvo.org RDF dump, licensed under
+; a Creative Commons Attribution-ShareAlike (CC-BY-SA) 3.0 Unported license
+; (http://creativecommons.org/licenses/by-sa/3.0/).
 aar = "Αφάρ"
 aat = "Αρβανίτικη γλώσσα"
 abk = "Αμπχαζικά"
