--- a/languages/ISO639-3/en.ini
+++ b/languages/ISO639-3/en.ini
@@ -1,3 +1,8 @@
+; Some data in this file is derived from the Lexvo.org RDF dump, licensed under
+; a Creative Commons Attribution-ShareAlike (CC-BY-SA) 3.0 Unported license
+; (http://creativecommons.org/licenses/by-sa/3.0/).
+; This data includes English language names from the Ethnologue Language Codes
+; database (see https://www.ethnologue.com/codes/).
 ??? = "Unknown"
 ___ = "No information provided"
 aaa = "Ghotuo"
