--- a/languages/ISO639-3/hi.ini
+++ b/languages/ISO639-3/hi.ini
@@ -1,3 +1,6 @@
+; Some data in this file is derived from the Lexvo.org RDF dump, licensed under
+; a Creative Commons Attribution-ShareAlike (CC-BY-SA) 3.0 Unported license
+; (http://creativecommons.org/licenses/by-sa/3.0/).
 aar = "अफ़ार"
 abj = "अका बिया भाषा"
 abk = "अब्ख़ाज़ियन"
