--- a/languages/ISO639-3/sv.ini
+++ b/languages/ISO639-3/sv.ini
@@ -1,4 +1,6 @@
-; Languages
+; Some data in this file is derived from the Lexvo.org RDF dump, licensed under
+; a Creative Commons Attribution-ShareAlike (CC-BY-SA) 3.0 Unported license
+; (http://creativecommons.org/licenses/by-sa/3.0/).
 ___ = "uppgift saknas"
 aae = "Arberesjiska"
 aap = "Pará Arára"
