Normalize language files.

--- a/languages/ga.ini
+++ b/languages/ga.ini
@@ -1265,7 +1265,7 @@ total_saved_items = "Líon iomlán míreanna sábháilte"
 total_tags = "Líon iomlán clibeanna"
 total_users = "Líon iomlán úsáideoirí"
 Transliterated Title = "Teideal traslitrithe"
-tree_search_limit_reached_html = 'Fuarthas an iomarca torthaí ar do chuardach agus ní féidir iad a thaispeáint sa chrann. Níl ach na chéad <b>%%limit%%</b> mír á dtaispeáint.'
+tree_search_limit_reached_html = "Fuarthas an iomarca torthaí ar do chuardach agus ní féidir iad a thaispeáint sa chrann. Níl ach na chéad <b>%%limit%%</b> mír á dtaispeáint."
 trending_items_channel_title = "Míreanna atá ag treochtáil"
 unique_tags = "Clibeanna uathúla"
 University Library = "Leabharlann ollscoile"
