--- a/languages/tr.ini
+++ b/languages/tr.ini
@@ -1436,7 +1436,7 @@ total_saved_items = "Toplam Kayıtlı Öğeler"
 total_tags = "Toplam Etiketler"
 total_users = "Toplam Kullanıcılar"
 Transliterated Title = "Çeviri Başlığı"
-tree_search_limit_reached_html = 'Aramanız çok fazla sonuç verdi. Bu yapıda gösterilemiyor. Sadece ilk <b>%%limit%%</b> kayıt gösteriliyor.'
+tree_search_limit_reached_html = "Aramanız çok fazla sonuç verdi. Bu yapıda gösterilemiyor. Sadece ilk <b>%%limit%%</b> kayıt gösteriliyor."
 trending_items_channel_title = "Trend Olan Kayıtlar"
 unique_tags = "Benzersiz Etiketler"
 University Library = "Üniversite Kütüphanesi"
