--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -1381,7 +1381,7 @@ total_saved_items = "Celkem uložených položek"
 total_tags = "Celkem tagů"
 total_users = "Celkem uživatelů"
 Transliterated Title = "Transliterovaný název"
-tree_search_limit_reached_html = 'Na Váš dotaz bylo nalezeno příliš mnoho výsledků, proto je nebylo možné všechny zobrazit ve stromové struktuře. Bylo zobrazeno pouze prvních <b>%%limit%%</b> položek.'
+tree_search_limit_reached_html = "Na Váš dotaz bylo nalezeno příliš mnoho výsledků, proto je nebylo možné všechny zobrazit ve stromové struktuře. Bylo zobrazeno pouze prvních <b>%%limit%%</b> položek."
 trending_items_channel_title = "O co je teď zájem"
 unique_tags = "Unikátní tagy"
 University Library = "Univerzitní knihovna"
