--- a/languages/cy.ini
+++ b/languages/cy.ini
@@ -1220,7 +1220,7 @@ total_saved_items = "Cyfanswm Eitemau wedi'u Cadw"
 total_tags = "Cyfanswm Tagiau"
 total_users = "Cyfanswm Defnyddwyr"
 Transliterated Title = "Teitl Wedi'i Drawslythrennu"
-tree_search_limit_reached_html = 'Roedd gormod o ganlyniadau i\'w dangos yn y goeden. Ond yn dangos y <b>%%limit%%</b> eitem gyntaf.'
+tree_search_limit_reached_html = "Roedd gormod o ganlyniadau i'w dangos yn y goeden. Ond yn dangos y <b>%%limit%%</b> eitem gyntaf."
 trending_items_channel_title = "Eitemau sy'n Trendio"
 unique_tags = "Tagiau Unigryw"
 University Library = "Llyfrgell y Brifysgol"
