--- a/languages/de.ini
+++ b/languages/de.ini
@@ -1382,7 +1382,7 @@ total_saved_items = "Total gespeicherter Objekte"
 total_tags = "Total Tags"
 total_users = "Total Benutzer"
 Transliterated Title = "Transliterierter Titel"
-tree_search_limit_reached_html = 'Ihr Suche ergab zuviele Treffer, um die gesamte Hierarchie anzeigen zu können. Es werden nur the ersten <b>%%limit%%</b> Treffer angezeigt.'
+tree_search_limit_reached_html = "Ihr Suche ergab zuviele Treffer, um die gesamte Hierarchie anzeigen zu können. Es werden nur the ersten <b>%%limit%%</b> Treffer angezeigt."
 trending_items_channel_title = "Beliebte Medien"
 unique_tags = "Einmalige Tags"
 University Library = "Universitätsbibliothek"
