--- a/languages/pt-br.ini
+++ b/languages/pt-br.ini
@@ -1382,7 +1382,7 @@ total_saved_items = "Total de itens salvados"
 total_tags = "Total de tags"
 total_users = "Total de Usuários"
 Transliterated Title = "Título Transliterado"
-tree_search_limit_reached_html = 'A sua busca devolveu muitos resultados para mostrar em árvore. Mostrando apenas os primeiros <b>%%limit%%</b> registros.'
+tree_search_limit_reached_html = "A sua busca devolveu muitos resultados para mostrar em árvore. Mostrando apenas os primeiros <b>%%limit%%</b> registros."
 trending_items_channel_title = "Itens de Tendência"
 unique_tags = "Tags únicas"
 University Library = "Biblioteca Universitária"
