--- a/languages/se.ini
+++ b/languages/se.ini
@@ -1247,7 +1247,7 @@ total_saved_items = "Furkejuvvon merkošat oktiibuot"
 total_tags = "Fáddágilkorat oktiibuot"
 total_users = "Geavaheaddjit oktiibuot"
 Transliterated Title = "Translittererejuvvon namahus"
-tree_search_limit_reached_html = 'Du ohcu attii liiggi bohtosiid čájehit daid muoras. Čájehuvvojit dušše vuosttaš <b>%%limit%%</b> čuozahaga.'
+tree_search_limit_reached_html = "Du ohcu attii liiggi bohtosiid čájehit daid muoras. Čájehuvvojit dušše vuosttaš <b>%%limit%%</b> čuozahaga."
 trending_items_channel_title = "Loktaneame"
 unique_tags = "Oktagaslaš fáddágilkorat oktiibuot"
 University Library = "Universiteahta girjerádju"
