--- a/languages/sl.ini
+++ b/languages/sl.ini
@@ -788,7 +788,7 @@ total_resources = "Vsi viri"
 total_saved_items = "Vsi shranjeni predmeti"
 total_tags = "Vse oznake"
 total_users = "Vsi uporabniki"
-tree_search_limit_reached_html = 'Preveč je rezultato za prikaz. Prikaz samo prvih <b>%%limit%%</b> rezultatov.'
+tree_search_limit_reached_html = "Preveč je rezultato za prikaz. Prikaz samo prvih <b>%%limit%%</b> rezultatov."
 unique_tags = "Enkratne oznake"
 University Library = "Univerzitetna knjižnica"
 Unknown = "Neznan"
