[release-9.1] Remove non-functional search link from hierarchy search limit message. (#3274)

--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -1381,7 +1381,7 @@ total_saved_items = "Totalantal sparade resurser"
 total_tags = "Totalantal taggar"
 total_users = "Totalantar användare"
 Transliterated Title = "Translittererad titel"
-tree_search_limit_reached_html = 'Din sökning gav för många resultat att visa i trädet. Visar de första <b>%%limit%%</b> resultat. Klicka <a id="fullSearchLink" href="%%url%%" target="_blank">här</a> för att se alla resultat.'
+tree_search_limit_reached_html = "Din sökning gav för många resultat att visa i trädet. Visar de första <b>%%limit%%</b> resultat."
 trending_items_channel_title = "Hett nu"
 unique_tags = "Unika taggar"
 University Library = "Universitetsbibliotek"
