--- a/languages/en.ini
+++ b/languages/en.ini
@@ -306,6 +306,7 @@ Data Set = "Data Set"
 Database = "Database"
 databases_recommend_heading = "Databases"
 databases_recommend_intro = "Search directly in relevant databases for enhanced functionality."
+databases_recommend_link_to_all = "List of All Databases"
 Date = "Date"
 Date of birth = "Date of birth"
 Date of death = "Date of death"
