Handling bad MARC records

--- a/languages/cs.ini
+++ b/languages/cs.ini
@@ -402,6 +402,7 @@ epf_recommendations = "Výsledky vyhledávání publikací"
 epf_recommendations_more = "Více výsledků vyhledávání publikací"
 ePub Full Text = "Plný text ve formátu ePub"
 Era = "Období"
+error_creating_marc_xml = "Při formátování MARC záznamu se vyskytla chyba"
 error_inconsistent_parameters = "Došlo k chybě. Byly detekovány protichůdné parametry."
 error_page_parameter_list_heading = "Parametry požadavku"
 Exception = "Výjimka"
