Use a new 'more_results_ellipsis" translation string

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -816,6 +816,7 @@ more_authors_abbrev = "et al."
 more_ellipsis = "more…"
 more_info_toggle = "Show/hide more info."
 more_options_ellipsis = "More options…"
+more_results_ellipsis = "More results…"
 more_topics = "%%count%% more topics"
 Most Recent Received Issues = "Most Recent Received Issues"
 Multiple Call Numbers = "Multiple Call Numbers"
