--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -1193,6 +1193,14 @@ Results = "Resultat"
 results = "resultat"
 Results for = "Resultat för sökningen"
 Results per page = "Resultat per sida"
+results_cited_by_title = 'Resultat citerade av "%%title%%"'
+results_cited_by_title_link_html = 'Resultat citerade av <a href="%%url%%">%%title%%</a>'
+results_cited_by_title_note = "Observera att denna inte nödvändigtvis är en fullständig citeringslista."
+results_cited_by_title_search_link = "Resultat citerad i detta"
+results_citing_title = 'Resultat som citerar "%%title%%"'
+results_citing_title_link_html = 'Resultat som citerar <a href="%%url%%">%%title%%</a>'
+results_citing_title_note = "Observera att denna inte nödvändigtvis är en fullständig citeringslista."
+results_citing_title_search_link = "Resultat som citerar detta"
 Resumption Token = "Resumption Token"
 Return Date = "Återlämningsdag"
 Review by = "Recensent"
