Support token match variation on translate

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1005,6 +1005,8 @@ password_only_alphanumeric = "Numbers and letters A-Z only"
 password_only_numeric = "Numbers only"
 Passwords do not match = "Passwords do not match"
 past_days = "Past %%range%% Days"
+past_days_token_matches_1 = "Yesterday"
+past_days_token_matches_30 = "Past Month"
 patron_account_expires = "Expires"
 patron_status_address_missing = "Your address is missing."
 patron_status_card_blocked = "This library card is blocked from borrowing."
@@ -1457,7 +1459,7 @@ widen_prefix = "Try widening your search to"
 wiki_link = "Provided by Wikipedia"
 with filters = "with filters"
 Year of Publication = "Year of Publication"
-Yesterday = "Yesterday"
+;Yesterday = "Yesterday"
 You do not have any fines = "You do not have any fines"
 You do not have any holds or recalls placed = "You do not have any holds or recalls placed"
 You do not have any interlibrary loan requests placed = "You do not have any interlibrary loan requests placed"
