Switch to using MessageFormatter.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1004,9 +1004,7 @@ password_minimum_length = "Minimum password length is %%minlength%% characters"
 password_only_alphanumeric = "Numbers and letters A-Z only"
 password_only_numeric = "Numbers only"
 Passwords do not match = "Passwords do not match"
-past_days = "Past %%range%% Days"
-past_days_token_matches_1 = "Yesterday"
-past_days_token_matches_30 = "Past Month"
+past_days = "{range, plural, =1 {Yesterday} =30 {Past Month} other {Past # Days}}"
 patron_account_expires = "Expires"
 patron_status_address_missing = "Your address is missing."
 patron_status_card_blocked = "This library card is blocked from borrowing."
