Uncomment line to fix build failure.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1457,7 +1457,7 @@ widen_prefix = "Try widening your search to"
 wiki_link = "Provided by Wikipedia"
 with filters = "with filters"
 Year of Publication = "Year of Publication"
-;Yesterday = "Yesterday"
+Yesterday = "Yesterday"
 You do not have any fines = "You do not have any fines"
 You do not have any holds or recalls placed = "You do not have any holds or recalls placed"
 You do not have any interlibrary loan requests placed = "You do not have any interlibrary loan requests placed"
