Adjust all language files.

--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -998,7 +998,7 @@ password_minimum_length = "Minsta längd på lösenord är %%minlength%% tecken"
 password_only_alphanumeric = "Bara siffror och bokstäver a-z"
 password_only_numeric = "Bara siffror"
 Passwords do not match = "Lösenorden stämmer inte"
-past_days = "Senaste %%range%% Dagar"
+past_days = "{range, plural, =1 {Från igår} other {Senaste # Dagar}}"
 patron_account_expires = "Förfaller"
 patron_status_address_missing = "Din adress saknas."
 patron_status_card_blocked = "Du har låneförbud."
@@ -1451,7 +1451,6 @@ widen_prefix = "Pröva att utvidga sökningen:"
 wiki_link = "Levererad av Wikipedia"
 with filters = "med filter"
 Year of Publication = "Utgivningsår"
-Yesterday = "Från igår"
 You do not have any fines = "Du har inga obetalda avgifter"
 You do not have any holds or recalls placed = "Du har inga reserveringar i kraft"
 You do not have any interlibrary loan requests placed = "Du har inga fjärrlånbeställningar i kraft"
