--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1004,7 +1004,7 @@ password_minimum_length = "Minimum password length is %%minlength%% characters"
 password_only_alphanumeric = "Numbers and letters A-Z only"
 password_only_numeric = "Numbers only"
 Passwords do not match = "Passwords do not match"
-past_days = "{range, plural, =1 {Yesterday} =30 {Past Month} other {Past # Days}}"
+past_days = "{range, plural, =1 {Yesterday} =7 {Past Week} other {Past # Days}}"
 patron_account_expires = "Expires"
 patron_status_address_missing = "Your address is missing."
 patron_status_card_blocked = "This library card is blocked from borrowing."
@@ -1457,7 +1457,6 @@ widen_prefix = "Try widening your search to"
 wiki_link = "Provided by Wikipedia"
 with filters = "with filters"
 Year of Publication = "Year of Publication"
-Yesterday = "Yesterday"
 You do not have any fines = "You do not have any fines"
 You do not have any holds or recalls placed = "You do not have any holds or recalls placed"
 You do not have any interlibrary loan requests placed = "You do not have any interlibrary loan requests placed"
