--- a/languages/en.ini
+++ b/languages/en.ini
@@ -277,6 +277,8 @@ confirm_renew_selected_text = "Do you wish to renew the selected items?"
 confirm_storage_retrieval_request_cancel_all_text = "Do you wish to cancel all your current storage retrieval requests?"
 confirm_storage_retrieval_request_cancel_selected_text = "Do you wish to cancel your selected storage retrieval requests?"
 Connecting of library cards is not supported = "Connecting of library cards is not supported"
+consortial_vufind_recommend_heading = "Borrow from a Partner Library"
+consortial_vufind_recommend_intro_html = '<a href="%%url%%" target="_blank">%%result_count%% result(s)</a> found at partner libraries.'
 Contents = "Contents"
 Contributing Source = "Contributing Source"
 Contributors = "Contributors"
@@ -816,6 +818,7 @@ more_authors_abbrev = "et al."
 more_ellipsis = "more…"
 more_info_toggle = "Show/hide more info."
 more_options_ellipsis = "More options…"
+more_results_ellipsis = "More results…"
 more_topics = "%%count%% more topics"
 Most Recent Received Issues = "Most Recent Received Issues"
 Multiple Call Numbers = "Multiple Call Numbers"
