adding in translations that got missed.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -902,7 +902,7 @@ number_decimal_point = "."
 number_thousands_separator = ","
 OAI Server = "OAI Server"
 Occupation = "Occupation"
-od_account_noaccess = "This library card does not have access to content in OverDrive"
+od_account_noaccess = "This library card does not have access to content in OverDrive."
 od_account_problem = "There is a problem with your account. %%message%%"
 od_audiobook-mp3 = "MP3 audiobook"
 od_audiobook-overdrive = "OverDrive Listen audiobook"
@@ -912,21 +912,26 @@ od_avail_total = "Total Copies:"
 od_but_cancel_hold = "Cancel this hold"
 od_but_checkout = "Checkout Through OverDrive"
 od_but_checkout_s = "Checkout"
+od_but_edit_hold = "Edit hold"
+od_but_edit_hold_conf = "Confirm update"
 od_but_gettitle = "Download this content"
 od_but_gettitle_s = "Download"
 od_but_hold = "Place A Hold Through OverDrive"
 od_but_hold_s = "Place Hold"
 od_but_return = "Return this title"
+od_but_susp_hold = "Suspend hold"
 od_cancel_hold = "Cancel OverDrive Hold"
+od_cancel_hold_confirm = "Are you sure  you want to remove this hold?"
 od_checkout = "OverDrive Checkout"
 od_code_connection_failed = "Connection to OverDrive failed. If the problem persists, please contact your library."
 od_code_contentnotavail = "This content is not available in your area."
 od_code_login_for_avail = "Login for availability"
 od_code_resource_not_found = "Title not found"
+od_copies_available = "copies available"
 od_content = "OverDrive Content"
 od_dl_formats = "Supported Download Formats"
 od_docheckout_failure = "This title could not be checked out."
-od_docheckout_success = "This title has been checked out to you. It expires on %%expireDate%%"
+od_docheckout_success = "This title has been checked out to you. It expires on %%expireDate%%."
 od_early_return = "OverDrive Early Return"
 od_ebook-epub-adobe = "Adobe EPUB eBook"
 od_ebook-epub-open = "Open EPUB eBook"
@@ -945,20 +950,43 @@ od_hold_cancel_failure = "The hold cancellation request failed."
 od_hold_cancel_success = "The hold was canceled successfully."
 od_hold_email = "Email Address for hold notification: %%holdEmailAddress%%."
 od_hold_now_avail = "This hold is available for checkout. Checkout expires on %%expireDate%%."
+od_hold_now_avail_s = "Available to borrow - Expires on %%expireDate%%"
 od_hold_place_failure = "The hold request failed."
-od_hold_place_success = "This title has been placed on hold. Your hold position is %%holdListPosition%%"
+od_hold_place_success = "This title has been placed on hold. Your hold position is %%holdListPosition%%."
 od_hold_placed_on = "Hold placed on %%holdPlacedDate%%."
 od_hold_queue = "Position %%holdPosition%% of %%numberOfHolds%% in holds queue."
+od_hold_queue_s = "Position: %%holdPosition%% / %%numberOfHolds%%"
+od_hold_redelivery = "This hold has been suspended for %%days%% days."
+od_hold_redelivery_s = "Suspended for %%days%% days"
+od_hold_susp_indef = "This hold has been suspended indefinitely."
+od_hold_susp_indef_s = "Suspended indefinitely"
+od_hold_update_failure = "The hold update request failed. "
+od_hold_update_success = "The hold was updated successfully."
 od_holds = "OverDrive Holds"
 od_info_unavail = "This information is currently unavailable."
 od_is_checkedout = "You have this title checked out.  It's due on %%due_date%%."
 od_is_on_hold = "You have this title on hold."
 od_loans = "OverDrive Loans"
-od_mycontent_help = 'For information about and help with downloading these titles, see <a href="%%url%%">OverDrive Help</a>.'
+od_magazine-overdrive = "Digital Magazine"
+od_mycontent_help = "For information about and help with downloading these titles, see <a href="%%url%%">OverDrive Help</a>."
 od_none_found = "No titles found."
+od_people = "People"
+od_person = "Person"
+od_return_confirm = "Are you sure you want to return this title?"
+od_none_found = "No titles found."
+od_resource_page = "Overdrive Resource Page"
 od_return_failure = "This title could not be returned."
 od_return_success = "This title has been returned."
-od_video-streaming = "streaming video file"
+od_susp_after = "Deliver after %%days%% days"
+od_susp_asap = "Deliver as soon as possible"
+od_susp_deliver = "Deliver"
+od_susp_hold = "Suspend hold"
+od_susp_hold_confirm = "How long would you like to suspend this hold?"
+od_susp_hold_edit = "Edit delivery date"
+od_susp_ind = "Suspend indefinitely"
+od_unlimited = "Unlimited"
+od_video-streaming = "Streaming video file"
+od_waiting = "waiting"
 of_num_results = "#%%position%% of %%total%% results"
 old_password = "Old Password"
 On Reserve = "On Reserve"
