add translations for service type

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -524,6 +524,12 @@ Geographic Terms = "Geografische Kategorien"
 Geography = "Geographie"
 Get full text = "Volltext"
 Get more information = "Weitere Angaben"
+
+getDOI = "Weiterleitung zum DOI"
+getFullTxt = "Weiterleitung zum digitalen Volltext"
+getHolding = "Weiterleitung zum Bestand"
+getWebService = "Weiterleitung zum Web-Dienst"
+
 Get RSS Feed = "RSS-Feed abonnieren"
 Globe = "Globus"
 Go = "ausführen"
