--- a/languages/en.ini
+++ b/languages/en.ini
@@ -524,6 +524,12 @@ Geographic Terms = "Geographic Terms"
 Geography = "Geography"
 Get full text = "Get full text"
 Get more information = "Get more information"
+
+getDOI = "Forwarding to DOI"
+getFullTxt = "Forwarding to digital full text"
+getHolding = "Forwarding to holding"
+getWebService = "Forwarding to web service"
+
 Get RSS Feed = "RSS Feed"
 Globe = "Globe"
 Go = "Go"
