removed unused translation and moved added explain_ prefixes

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -334,7 +334,6 @@ Description = "Beschreibung"
 Desired Username = "Gewünschter Benutzername"
 Detailed View = "Detailansicht"
 Details = "Details"
-Difference to top result relevance = "Differenz zu der top Relevanz"
 Displaying the top = "Angezeigt werden die ersten"
 Document Inspector = "Dokumentprüfer"
 Document Type = "Publikationsart"
@@ -416,6 +415,7 @@ explain_compared = "Relevanz im Vergleich zu der Trefferrelevanz des Top Treffer
 explain_coord = " * %%coord%% (Ausgleich von Anzahl der Treffer im Vergleich zur Suche)"
 explain_difference_score = "Differenz zum Topscore"
 explain_disabled = "Explain ist für %%searchClassId%% deaktiviert"
+explain_for_search = "Explain für Suche"
 explain_modified_value = "Produkt von %%relevanceValue%% (Relevanzwert)"
 explain_modifier = "mit dem Modifier: %%modifier%%"
 explain_record_score = "Titlescore"
@@ -424,7 +424,7 @@ explain_relevance_score = "Relevanzscore"
 explain_result_list_chart_title = "Score: %%score%%"
 explain_result_list_hint = "Relevanzscore. Klicke für eine detailliertere Erklärung."
 explain_sum = "Summe"
-Explanation for search = "Explain für Suche"
+explain_top_relevance = "Top Treffer Relevanz"
 Export = "Export"
 Export Favorites = "Favoriten exportieren"
 Export Items = "Exportieren"
@@ -1390,7 +1390,6 @@ Too Many Email Recipients = "Zu viele E-Mail-Adressen"
 too_many_favorites = "Diese Liste ist zu gross um auf einmal angezeigt zu werden. Versuchen Sie Ihre Favoriten in weitere Listen zu unterteilen oder mittels Tags einzuschränken."
 too_many_new_items = "Es gibt zu viele Einträge um in einer einzigen Liste angezeigt zu werden. Versuchen Sie Ihre Suche weiter einzuschränken."
 too_many_reserves = "Es gibt zu viele Vormerkungen um in einer einzigen Liste angezeigt zu werden. Versuchen Sie Ihre Suche weiter einzuschränken."
-Top Result Relevance = "Top Treffer Relevanz"
 top_facet_label = "%%label%% innerhalb Ihrer Suche."
 Topic = "Thema"
 Topics = "Themen"
