--- a/languages/en.ini
+++ b/languages/en.ini
@@ -339,7 +339,6 @@ Description = "Description"
 Desired Username = "Desired Username"
 Detailed View = "Detailed View"
 Details = "Staff View"
-Difference to top result relevance = "Difference to top result relevance"
 Displaying the top = "Displaying the top"
 Document Inspector = "Document Inspector"
 Document Type = "Document Type"
@@ -421,6 +420,7 @@ explain_compared = "Relevance in comparison to the relevance of the top result"
 explain_coord = " * %%coord%% (adjust for number of matches compared to search)"
 explain_difference_score = "difference to top score"
 explain_disabled = "Explain is deactivated for %%searchClassId%%"
+explain_for_search = "Explanation for search"
 explain_modified_value = "Product of %%relevanceValue%% (relevance value)"
 explain_modifier = "with a modifier of %%modifier%%"
 explain_record_score = "record score"
@@ -429,7 +429,7 @@ explain_relevance_score = "Relevance Score"
 explain_result_list_chart_title = "Score: %%score%%"
 explain_result_list_hint = "Relevance score. Click to see detailed explanation."
 explain_sum = "sum"
-Explanation for search = "Explanation for search"
+explain_top_relevance = "Top Result Relevance"
 Export = "Export"
 Export Favorites = "Export Items"
 Export Items = "Export Items"
@@ -1395,7 +1395,6 @@ Too Many Email Recipients = "Too Many Email Recipients"
 too_many_favorites = "This list is too large to display all at once. Try rearranging your saved items into more lists or limiting using tags."
 too_many_new_items = "There are too many new items to display in a single list. Try limiting your search."
 too_many_reserves = "There are too many course reserves to display in a single list. Try limiting your search."
-Top Result Relevance = "Top Result Relevance"
 top_facet_label = "%%label%% within your search."
 Topic = "Topic"
 Topics = "Topics"
